fixing some responsive incapabilities

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -20,6 +20,8 @@
     font-size: 1.3rem;
     color: #fff;
     letter-spacing: 0.1rem;
+    text-align: center;
+    padding: 1rem;
   }
 }
 .social-icons {
