--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -8,6 +8,16 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
 }
 
 img {
@@ -17,6 +27,7 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: 2rem;
+  z-index: 3;
   .contact-box {
     display: flex;
     h2 {
@@ -28,7 +39,10 @@ img {
     }
   }
 }
-
+.contact-form {
+  width: 100%;
+  z-index: 99;
+}
 .name-email {
   margin-bottom: 2rem;
   display: flex;
@@ -38,7 +52,7 @@ img {
     margin-right: 2rem;
   }
   input {
-    width: 100%;
+    width: 60%;
     background-color: transparent;
     height: 3rem;
     padding-left: 0.5rem;
@@ -55,6 +69,12 @@ img {
 .email:focus {
   outline: none;
 }
+.text-box {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
 .textInput {
   background-color: transparent;
   border: none;
@@ -62,6 +82,8 @@ img {
   color: #fff;
   border-bottom: 2px solid #fff;
   padding: 0.2rem 0 0 0.5rem;
+  margin: 0 auto;
+  width: 85%;
   &:focus {
     outline: none;
   }
