--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 12rem;
+  padding: 2rem;
 }
 .top {
   margin: 12rem 0 6rem 0;
@@ -16,6 +17,7 @@
     font-weight: bolder;
     letter-spacing: 0.1rem;
     margin-bottom: 3rem;
+    text-align: center;
   }
   span {
     display: inline-block;
@@ -36,23 +38,26 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, auto));
   gap: 2.5rem;
-  grid-template-rows: 150px 150px;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 100%;
 }
 .service-style {
   display: grid;
   grid-template-columns: 1fr 0.4fr;
   height: 100%;
+  width: 100%;
 }
 .service-image {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  position: relative;
   img {
-    width: 40%;
+    width: 45%;
+    object-fit: cover;
   }
 }
 .service {
@@ -65,6 +70,7 @@
   h2 {
     font-weight: bolder;
     letter-spacing: 0.05rem;
+    text-align: right;
   }
   p {
     text-align: right;
@@ -79,5 +85,13 @@
   }
 }
 
-@media only screen and(max-width: 1160px) {
+@media screen and(max-width: 900px) {
+  .bottom {
+    padding: 0.5rem 1rem;
+  }
+}
+@media only screen and(max-width: 660px) {
+  .bottom {
+    grid-template-columns: 1fr;
+  }
 }
