--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 12rem;
+  padding: 2rem;
 }
 
 .top {
@@ -191,6 +192,7 @@
   font-weight: bolder;
   letter-spacing: 0.1rem;
   margin-bottom: 3rem;
+  text-align: center;
 }
 
 .top span {
@@ -214,15 +216,13 @@
   -ms-grid-columns: (minmax(500px, auto))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(500px, auto));
   gap: 2.5rem;
-  -ms-grid-rows: 150px 150px;
-      grid-template-rows: 150px 150px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 90%;
+  width: 100%;
 }
 
 .service-style {
@@ -231,6 +231,7 @@
   -ms-grid-columns: 1fr 0.4fr;
       grid-template-columns: 1fr 0.4fr;
   height: 100%;
+  width: 100%;
 }
 
 .service-image {
@@ -244,10 +245,14 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  position: relative;
 }
 
 .service-image img {
-  width: 40%;
+  width: 45%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .service {
@@ -270,6 +275,7 @@
 .service h2 {
   font-weight: bolder;
   letter-spacing: 0.05rem;
+  text-align: right;
 }
 
 .service p {
@@ -283,6 +289,19 @@
 .service span {
   font-size: 1.1rem;
   color: #d4af37;
+}
+
+@media screen and (max-width: 900px) {
+  .bottom {
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .bottom {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 
 .reviews-section {
@@ -662,6 +681,17 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  position: relative;
+}
+
+.contact-section::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 img {
@@ -677,6 +707,7 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-left: 2rem;
+  z-index: 3;
 }
 
 .contact-container .contact-box {
@@ -691,6 +722,11 @@ img {
   font-size: 1.2rem;
   font-weight: bolder;
   letter-spacing: 0.1rem;
+}
+
+.contact-form {
+  width: 100%;
+  z-index: 99;
 }
 
 .name-email {
@@ -711,7 +747,7 @@ img {
 }
 
 .name-email input {
-  width: 100%;
+  width: 60%;
   background-color: transparent;
   height: 3rem;
   padding-left: 0.5rem;
@@ -730,6 +766,19 @@ img {
   outline: none;
 }
 
+.text-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .textInput {
   background-color: transparent;
   border: none;
@@ -737,6 +786,8 @@ img {
   color: #fff;
   border-bottom: 2px solid #fff;
   padding: 0.2rem 0 0 0.5rem;
+  margin: 0 auto;
+  width: 85%;
 }
 
 .textInput:focus {
@@ -867,6 +918,8 @@ img {
   font-size: 1.3rem;
   color: #fff;
   letter-spacing: 0.1rem;
+  text-align: center;
+  padding: 1rem;
 }
 
 .social-icons {
@@ -902,9 +955,21 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   padding: 1.5rem;
+  position: relative;
+}
+
+.wrapper {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .header {
@@ -1157,6 +1222,9 @@ body {
 }
 
 @media only screen and (max-width: 680px) {
+  html {
+    font-size: 45%;
+  }
   .navigation ul li a {
     font-size: 2.3rem;
   }
