--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -6,7 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   position: relative;
   &::after {
@@ -42,6 +42,7 @@ img {
 .contact-form {
   width: 100%;
   z-index: 99;
+  padding: 0 5rem;
 }
 .name-email {
   margin-bottom: 2rem;
@@ -123,6 +124,9 @@ img {
 @media only screen and(max-width: 900px) {
   .contact-section {
     flex-direction: column;
+  }
+  .contact-section {
+    align-items: center;
   }
 
   .textInput {
