--- a/style.css
+++ b/style.css
@@ -676,9 +676,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   position: relative;
@@ -727,6 +727,7 @@ img {
 .contact-form {
   width: 100%;
   z-index: 99;
+  padding: 0 5rem;
 }
 
 .name-email {
@@ -840,6 +841,11 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .contact-section {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .textInput {
     background-color: rgba(0, 0, 0, 0.6);
