--- a/scss/_aboutus.scss
+++ b/scss/_aboutus.scss
@@ -10,7 +10,7 @@
 .about-box {
   display: flex;
   .img1 {
-    background-image: url(about/nathon-oski-fE42nRlBcG8-unsplash.jpg);
+    background-image: url(../images/nathon-oski-fE42nRlBcG8-unsplash.jpg);
     width: 300px;
     height: 460px;
     margin-right: 2.5rem;
@@ -21,7 +21,7 @@
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
   }
   .img2 {
-    background-image: url(about/rahabi-khan-btgB0KRrKWc-unsplash.jpg);
+    background-image: url(../images/rahabi-khan-btgB0KRrKWc-unsplash.jpg);
     width: 370px;
     height: 460px;
     margin-right: 6rem;
