--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,7 +1,7 @@
 .contact-section {
   width: 100%;
   padding: 10rem 3rem;
-  background-image: url(contact_icons/rsz_chris-knight-_h1xxy96pqw-unsplash.jpg);
+  background-image: url(../images/rsz_chris-knight-_h1xxy96pqw-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
