--- a/scss/_reviews.scss
+++ b/scss/_reviews.scss
@@ -1,7 +1,7 @@
 .reviews-section {
   width: 100%;
   padding: 2rem;
-  background-image: url(reviewBckgrimage.jpg);
+  background-image: url(../images/reviewBckgrimage.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
