--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .about-box .img1 {
-  background-image: url(about/nathon-oski-fE42nRlBcG8-unsplash.jpg);
+  background-image: url(../images/nathon-oski-fE42nRlBcG8-unsplash.jpg);
   width: 300px;
   height: 460px;
   margin-right: 2.5rem;
@@ -34,7 +34,7 @@
 }
 
 .about-box .img2 {
-  background-image: url(about/rahabi-khan-btgB0KRrKWc-unsplash.jpg);
+  background-image: url(../images/rahabi-khan-btgB0KRrKWc-unsplash.jpg);
   width: 370px;
   height: 460px;
   margin-right: 6rem;
@@ -307,7 +307,7 @@
 .reviews-section {
   width: 100%;
   padding: 2rem;
-  background-image: url(reviewBckgrimage.jpg);
+  background-image: url(../images/reviewBckgrimage.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -669,7 +669,7 @@
 .contact-section {
   width: 100%;
   padding: 10rem 3rem;
-  background-image: url(contact_icons/rsz_chris-knight-_h1xxy96pqw-unsplash.jpg);
+  background-image: url(../images/rsz_chris-knight-_h1xxy96pqw-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -979,7 +979,7 @@ body {
 }
 
 .header {
-  background-image: url(nathon-oski-EW_rqoSdDes-unsplash.jpg);
+  background-image: url(images/nathon-oski-EW_rqoSdDes-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1063,9 +1063,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -1073,13 +1070,16 @@ body {
           align-items: center;
   border: 1rem solid #d4af37;
   z-index: 4;
-  -webkit-transform: translateX(-170rem);
-          transform: translateX(-170rem);
+  -webkit-transform: translateX(-1000rem);
+          transform: translateX(-1000rem);
   -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
 .active_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
